# agents

./: README.md
1_foundations/: agent_loop.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 2_lab2.ipynb  3_lab3.ipynb
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate/: main.py
3_crew/debate/src/debate/config/: agents.yaml
3_crew/engineering_team_2/: README.md  pyproject.toml
3_crew/engineering_team_2/output/: app.py  architecture.md  backend.py  data.json  main.py  qa_strategy.md  test_backend.py
3_crew/engineering_team_2/src/engineering_team_2/: crew.py  main.py  models.py
3_crew/engineering_team_2/src/engineering_team_2/config/: agents.yaml  tasks.yaml
3_crew/financial_researcher/output/: report.md
4_langgraph/: 2_lab2.ipynb
